dark mode fix

--- a/style/style.css
+++ b/style/style.css
@@ -853,6 +853,18 @@ body.darkTheme footer .connect .icon{
         font-size: 12px;
     }
 
+    header nav .links{
+        transform: translateX(40px) !important;
+    }
+
+    header nav .theme{
+        padding: 2px !important;
+    }
+
+    .theme button{
+        font-size: 20px;
+    }
+
     header nav .allProjects i{
         font-size: 12px;
     }
